--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.TCA"
         tools:targetApi="31">
         <activity
+            android:name=".Backend4_Notification"
+            android:exported="false" />
+        <activity
             android:name=".Backend4_LoginMessage"
             android:exported="false" />
         <activity
