--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TCA"
         tools:targetApi="31">
-        <activity android:name=".Backend8_AddDocument"
-            android:exported="false"/>
+        <activity
+            android:name=".Backend11_MessageWindow"
+            android:exported="false" />
+        <activity
+            android:name=".Backend10_JobApplicants"
+            android:exported="false" />
+        <activity
+            android:name=".Backend9_ViewJob"
+            android:exported="false" />
+        <activity
+            android:name=".Backend8_AddDocument"
+            android:exported="false" />
         <activity
             android:name=".Backend7_Settings"
             android:exported="false" />
