--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TCA"
         tools:targetApi="31">
-
+        <activity
+            android:name=".Backend13_ViewProfile"
+            android:exported="false" />
         <activity
             android:name=".Backend12_UpdatePage"
             android:exported="false" />
